<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_order_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/refund_input_third_no"
        android:inputType="number" />

    <EditText
        android:id="@+id/et_refer_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reprint_input_refer_no"
        android:inputType="number"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_query" />

    <TextView
        android:id="@+id/tv_result_query"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:background="#3f30" />

</LinearLayout>